public/stylesheets/exercises.css
/* Navegação de exercícios */
#resource .exercise-nav {
  height: 70px;
  background-color: rgb(247, 247, 247);
  border: solid 1px rgb(230, 230, 230)
}

.borderradius #resource .exercise-nav {
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

#resource .exercise ol.actions-buttons {
  margin-top: 10px;
  float: right;
}

#resource .exercise ol.actions-buttons li.lecture-buttons,
#resource .exercise ol.actions-buttons li.lecture-button-finalize {
  display: inline-block;
}

#resource .exercise-nav ol {
  margin: 14px 10px 1px 10px;
  overflow: hidden;
}

#resource .exercise-nav ol li {
  float: left;
  width: 58px;
  height: 38px;
  text-align: center;
}

#resource .exercise-nav ol li.actual {
  -webkit-box-shadow: 0 0 2px 1px #73c3e6, 0 0 0 1px white inset, inset 0 0 2px 1px #73c3e6;
  -moz-box-shadow: 0 0 2px 1px #73c3e6, 0 0 0 1px white inset, inset 0 0 2px 1px #73c3e6;
  box-shadow: 0 0 2px 1px #73c3e6, 0 0 0 1px white inset, inset 0 0 2px 1px #73c3e6;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  margin: 1px;
}

#resource .exercise-nav ol li.endless-lecture {
  width: 21px;
  font-weight: bold;
}

#resource .exercise .lecture-button-finalize .concave-button {
  margin: 0;
  margin-top: 2px;
  padding: 6px 25px 7px 25px;
}

.exercise .concave-button .end-exercise {
  display: block;
  width: 80px;
}

.exercise- .lecture-button-finalize .concave-button .end-exercise:before {
  display: block;
  float: left;
  margin-right: 5px;
}

#resource .exercise-nav ol li.question-answered a {
  color: rgb(77, 173, 214);
}

#resource .exercise ol li.question-right a {
  color: rgb(95, 192, 128);
}

#resource .exercise ol li.question-wrong a {
  color: rgb(232, 59, 59);
}

#resource .exercise .concave-clean {  
  padding: 6px 12px 7px 12px;
  color: rgb(77, 173, 214);
  border: 1px solid rgb(204, 204, 204);
  font-size: 1em;
}

#resource .exercise .concave-clean:hover {
  color: rgb(23, 137, 195);
  border: 1px solid rgb(76, 172, 213);
}

#resource .exercise-nav li a {
  color: rgb(179, 179, 179);
  font-size: 2.3em;
  font-weight: 100;
  font-family: museo-slab, "Helvetica Neue", Arial, sans-serif;
}

.textshadow #resource .exercise-nav li a {
  text-shadow: 0px 2px 0px white;
}

#resource .exercise li a.actual {
  font-weight: 900;
}

#resource .exercise .first-question,
#resource .exercise .last-question {
  font-size: .87em;
}

#resource .exercise .first-question {
  float: left;
  margin-left: 10px;
}

#resource .exercise .last-question {
  float: right;
  margin-right: 10px;

}

#resource .exercise-finalize-form {
  margin-top: 80px;
  text-align: center;
}

#resource .exercise-finalize-form .exercise-call {
  color: rgb(109, 110, 111);
}

#resource .exercise-finalize-form .concave-button {
  margin-top: 40px;
  width: 146px;
  height: 56px;
}

/* páginas de exercise */

#resource .exercise {
  line-height: 1.3;
}

#resource .exercise .question {
  margin: 35px 0px 12px 0px;
}

#resource .justification {
  margin: 40px 0px 30px 54px;
}

#resource .justification .call {
  font-family: museo-sans, "Helvetica Neue", Arial, sans-serif;
  font-weight: 500;
  font-size: 1.3em;
  letter-spacing: -1px;
  color: rgb(97, 160, 128);
  display: block;
}

#resource .justification p {
  font-style: italic;
}

#resource .exercise .alternatives {
  color: rgb(109, 110, 111);
}

#resource .alternatives li {
  padding: 8px 10px;
  clear: both;
  overflow: hidden;
}

#resource .alternatives li:nth-child(odd) {
  background-color: rgb(247, 247, 247);
}

.borderradius #resource .alternatives li {
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.textshadow #resource .alternatives li {
  -moz-text-shadow: 0px 1px 0px white;
  -webkit-text-shadow: 0px 1px 0px white;
  text-shadow: 0px 1px 0px white;
}

#resource .alternatives li .choice {
  font-weight: bold;
  color: rgb(203, 203, 203);
  float: left;
  margin-right: 7px;
  text-transform: uppercase;
}

#resource .alternatives.review li .choice {
  margin-right: 23px;
}

#resource .alternatives.review li.right-answer {
  background-color: rgb(225, 241, 225);
}

#resource .alternatives.review li.right-answer .choice {
  color: rgb(97, 160, 128);
  margin-right: 0px;
}

#resource .alternatives.review li.right-answer .choice:after {
  float: right;
  display: block;
  margin-left: 7px;
  margin-top: 2px;
}

#resource .alternatives li.selected .choice,
#resource .alternatives li.selected {
  color: black;
}

#resource .alternatives li input[type="radio"] {
  float: left;
  margin: 0px;
  margin: 2px 1px;
}

#resource .alternatives li p {
  width: 544px;
  float: left;
  margin-left: 7px;
}

#resource .review-exercise,
#resource .start-exercise {
  height: 98px;
  background-color: rgb(247, 247, 247);
  border: solid 1px rgb(204, 204, 204);
  margin-bottom: 20px;
}

#resource .review-exercise {
  height: 105px;
  padding: 20px 10px;
}

.borderradius #resource .review-exercise,
.borderradius #resource .start-exercise {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

#resource .start-exercise .concave-button {
  display: block;
  width: 165px;
  padding: 20px;
  margin: 20px auto;
}

#resource .start-exercise .concave-button.question-button,
#resource .start-exercise .concave-button.report-button {
  padding: 5px;
  float: left;
  width: auto;
  margin-top: 33px;
}

#resource .concave-button.question-button {
  margin-left: 180px;
  margin-right: 10px;
}

#resource .start-exercise .concave-button.report-button {
  padding: 5px 25px;
}

#resource .concave-button.question-button span:before,
#resource .concave-button.report-button span:before,
#resource .concave-button .do-exercise:before {
  float: left;
  margin-right: 5px;
}

#resource .review-exercise .review-info {
  float: left;
  width: 168px;
}

#resource .review-exercise .concave-button {
  padding: 7px 7px 6px 7px;
  margin: 40px 0px 0px 15px;
}
/* ... */

